--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,11 @@
             </ion-item>
           </ion-menu-toggle>
 
+          <ion-item routerDirection="root" lines="full" detail="false" routerLinkActive="selected">
+            <ion-icon aria-hidden="true" slot="start" ios="log-out-outline" md="log-out-sharp"></ion-icon>
+            <ion-label>Logout</ion-label>
+          </ion-item>
+
         </ion-list>
 
       </ion-content>
