--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -5,9 +5,21 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">login</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
+
+  <ion-list>
+    <ion-list>
+      <ion-item>
+        <ion-input label="Text input" placeholder="Enter text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-input label="Number input" type="number" placeholder="000"></ion-input>
+      </ion-item>
+    </ion-list>
+  </ion-list>
 </ion-content>
