--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,25 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
 
-<ion-content [fullscreen]="true">
-  <!-- <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header> -->
+  <ion-grid>
+    <ion-row>
+      <ion-col size-xs="12" size-sm="10" size-md="8" size-lg="6" size-xl="4" offset-xs="0" offset-sm="1" offset-md="2" offset-lg="3" offset-xl="4">
 
-  <ion-list>
-    <ion-list>
-      <ion-item>
-        <ion-input label="Text input" placeholder="Enter text"></ion-input>
-      </ion-item>
+        <ion-list>
+          <ion-item>
+            <ion-input label="Text input" placeholder="Enter text"></ion-input>
+          </ion-item>
 
-      <ion-item>
-        <ion-input label="Number input" type="number" placeholder="000"></ion-input>
-      </ion-item>
-    </ion-list>
-  </ion-list>
+          <ion-item>
+            <ion-input label="Number input" type="number" placeholder="000"></ion-input>
+          </ion-item>
+        </ion-list>
+
+        <ion-button type="submit" mode="ios" expand="block" class="ion-margin-top">
+          Log Masuk
+        </ion-button>
+
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
