--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -179,9 +179,9 @@
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
 
-    --ion-item-background: #000000;
+    --ion-item-background: var(--ion-color-white);
 
-    --ion-card-background: #1c1c1d;
+    --ion-card-background: var(--ion-color-white);
   }
 
   .ios ion-modal {
@@ -224,7 +224,7 @@
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: var(--ion-color-white);
 
     --ion-toolbar-background: #1f1f1f;
 
