--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -4,20 +4,43 @@
     <ion-row>
       <ion-col size-xs="12" size-sm="10" size-md="8" size-lg="6" size-xl="4" offset-xs="0" offset-sm="1" offset-md="2" offset-lg="3" offset-xl="4">
 
-        <ion-list>
-          <ion-item>
-            <ion-input label="Text input" placeholder="Enter text"></ion-input>
+        <div class="ion-text-center header">
+          <img class="app-icon" src="assets/icons/appicon.png" alt="App Icon">
+        </div>
+
+        <form #form="ngForm" (ngSubmit)="submitForm(form)" class="ion-padding">
+
+          <ion-title size="large">Sign In</ion-title>
+
+          <ion-item class="item-{{ (username.invalid && username.touched) || (username.invalid && form.submitted) ? 'start' : 'single' }} input-field" lines="full">
+            <ion-input ngModel required="true" type="email" name="username" #username="ngModel" autocomplete="email" placeholder="E-Mel" inputmode="email" [pattern]="EMAIL_REGEX"></ion-input>
+          </ion-item>
+          <ion-item class="item-end" *ngIf="(username.invalid && username.touched) || (username.invalid && form.submitted)" lines="none">
+            <ion-text class="error-text">
+              <p *ngIf="password.errors?.['required']">This field is required.</p>
+              <p *ngIf="username.errors?.['pattern']">Email must be in a valid format.</p>
+            </ion-text>
           </ion-item>
 
-          <ion-item>
-            <ion-input label="Number input" type="number" placeholder="000"></ion-input>
+          <ion-item class="item-{{ (password.invalid && password.touched) || (password.invalid && form.submitted) ? 'start' : 'single' }} input-field" lines="full">
+            <ion-input ngModel name="password" [type]="showPassword ? 'text' : 'password'" placeholder="Password" required="true" minlength="8" #password="ngModel" autocomplete="password"></ion-input>
+            <ion-icon slot="end" name="{{ showPassword ? 'eye-off-outline' : 'eye-outline' }}" (click)="showPassword = !showPassword"></ion-icon>
           </ion-item>
-        </ion-list>
+          <ion-item class="item-end" *ngIf="(password.invalid && password.touched) || (password.invalid && form.submitted)" lines="none">
+            <ion-text class="error-text">
+              <p *ngIf="password.errors?.['required']">This field is required.</p>
+              <p *ngIf="password.errors?.['minlength']">Password must be at least 8 character.</p>
+            </ion-text>
+          </ion-item>
 
-        <ion-button type="submit" mode="ios" expand="block" class="ion-margin-top">
-          Log Masuk
-        </ion-button>
+          <ion-button type="submit" mode="ios" expand="block" class="ion-margin-top">Login</ion-button>
 
+          <ion-row class="register-row ion-justify-content-between">
+            <ion-text (click)="openRegisterPage()" color="primary">Sign Up</ion-text>
+            <ion-text (click)="openResetPage()" color="primary">Forgot Password</ion-text>
+          </ion-row>
+
+        </form>
 
       </ion-col>
     </ion-row>
