--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -7,10 +7,160 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <!-- <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">deded</ion-title>
-    </ion-toolbar>
-  </ion-header> -->
+<ion-content>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size-xs="12" size-sm="10" size-md="8" size-lg="6" size-xl="4" offset-xs="0" offset-sm="1" offset-md="2" offset-lg="3" offset-xl="4">
+
+        <div [ngSwitch]="currentUser.roles">
+
+          <!-- ADMIN -->
+          <div *ngSwitchCase="'admin'">
+            <ion-card>
+              <ion-card-content>
+                <ion-row>
+                  <ion-col class="ion-text-left">
+                    <p style="font-size: 1.2rem; font-weight: bold;">Daily Transactions</p>
+                  </ion-col>
+                  <ion-col size="auto">
+                    <p style="font-size: 1.2rem; font-weight: bold;">{{ totalAmount | currency: 'RM' }}</p>
+                  </ion-col>
+                </ion-row>
+
+                <br>
+                <div class="divider"></div>
+                <br>
+
+                <ion-row>
+                  <ion-col size="6">
+                    <p>Last Transaction</p>
+                    <p style="font-size: 1.2rem;">{{ lastestTransaction.amount | currency: 'RM' }}</p>
+                  </ion-col>
+                  <ion-col size="6">
+                    <p>Date</p>
+                    <p style="font-size: 1.2rem;">{{ lastestTransaction.date }}</p>
+                  </ion-col>
+                </ion-row>
+              </ion-card-content>
+            </ion-card>
+          </div>
+
+          <!-- CANTEEN WORKER -->
+          <div *ngSwitchCase="'canteen-worker'">
+            <ion-card>
+              <ion-card-content>
+                <ion-row>
+                  <ion-col class="ion-text-left">
+                    <p style="font-size: 1.2rem; font-weight: bold;">Daily Transactions</p>
+                  </ion-col>
+                  <ion-col size="auto">
+                    <p style="font-size: 1.2rem; font-weight: bold;">{{ totalAmount | currency: 'RM' }}</p>
+                  </ion-col>
+                </ion-row>
+
+                <br>
+                <div class="divider"></div>
+                <br>
+
+                <ion-row>
+                  <ion-col size="6">
+                    <p>Last Transaction</p>
+                    <p style="font-size: 1.2rem;">{{ lastestTransaction.amount | currency: 'RM' }}</p>
+                  </ion-col>
+                  <ion-col size="6">
+                    <p>Date</p>
+                    <p style="font-size: 1.2rem;">{{ lastestTransaction.date }}</p>
+                  </ion-col>
+                </ion-row>
+              </ion-card-content>
+            </ion-card>
+          </div>
+
+          <!-- PARENT -->
+          <div *ngSwitchCase="'parent'">
+            <ion-card>
+              <ion-card-content>
+                <ion-row>
+                  <ion-col class="ion-text-left">
+                    <p style="font-size: 1.2rem; font-weight: bold;">Daily Reservations</p>
+                  </ion-col>
+                  <ion-col size="auto">
+                    <p style="font-size: 1.2rem; font-weight: bold;">{{ totalAmount | currency: 'RM' }}</p>
+                  </ion-col>
+                </ion-row>
+
+                <br>
+                <div class="divider"></div>
+                <br>
+
+                <ion-row>
+                  <ion-col size="6">
+                    <p>Last Transaction</p>
+                    <p style="font-size: 1.2rem;">{{ lastestTransaction.amount | currency: 'RM' }}</p>
+                  </ion-col>
+                  <ion-col size="6">
+                    <p>Date</p>
+                    <p style="font-size: 1.2rem;">{{ lastestTransaction.date }}</p>
+                  </ion-col>
+                </ion-row>
+              </ion-card-content>
+            </ion-card>
+
+            <br>
+            <h2 class="ion-margin-start">My Family</h2>
+
+            <div *ngIf="isLoading" class="ion-text-center">
+              <ion-spinner name="crescent"></ion-spinner>
+            </div>
+
+            <div *ngIf="!isLoading && loadedChild.length > 0">
+              <ion-card *ngFor="let item of loadedChild">
+                <ion-card-header color="danger">
+                  <ion-row class="ion-align-items-center">
+                    <ion-col size="auto">
+                      <ion-avatar>
+                        <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+                      </ion-avatar>
+                    </ion-col>
+                    <ion-col>
+                      <ion-card-title class="ion-margin-start">Haikal</ion-card-title>
+                    </ion-col>
+                  </ion-row>
+                </ion-card-header>
+                <ion-card-content>
+                  <br>
+                  <ion-row>
+                    <ion-col size="6">
+                      <p>Reservation Date</p>
+                      <p style="font-size: 1.2rem;">01/01/2024</p>
+                    </ion-col>
+                    <ion-col size="6">
+                      <p>Food</p>
+                      <p style="font-size: 1.2rem;">Nasi Goreng Cina</p>
+                    </ion-col>
+                  </ion-row>
+                </ion-card-content>
+              </ion-card>
+            </div>
+
+            <ion-card *ngIf="!isLoading && loadedChild.length === 0">
+              <ion-card-content>You have no childs yet.</ion-card-content>
+            </ion-card>
+          </div>
+
+          <!-- DEFAULT -->
+          <div *ngSwitchDefault>
+            <div *ngIf="isLoading" class="ion-text-center">
+              <ion-spinner name="crescent"></ion-spinner>
+            </div>
+          </div>
+
+        </div>
+
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
