--- a/src/app/pages/menu/menu-index/menu-index.page.html
+++ b/src/app/pages/menu/menu-index/menu-index.page.html
@@ -1,13 +1,102 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="false">
   <ion-toolbar>
-    <ion-title>menu-index</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Menu</ion-title>
+    <ion-buttons slot="end">
+      <ion-button routerLink="create">
+        <ion-icon slot="icon-only" name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">menu-index</ion-title>
+      <ion-title size="large">Menu</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-list *ngIf="isLoading">
+    <ion-item-sliding *ngFor="let item of [1, 2, 3, 4, 5]; let index = index;">
+
+      <ion-item-divider *ngIf="index === 0">
+        <ion-label>Loading...</ion-label>
+      </ion-item-divider>
+
+      <ion-item>
+        <ion-grid fixed>
+          <ion-row style="margin: 16px 0px;">
+            <ion-col size="auto" class="ion-text-center" style="margin-right: 16px;">
+              <ion-thumbnail>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              </ion-thumbnail>
+            </ion-col>
+            <ion-col class="ion-align-items-stretch">
+              <ion-text>
+                <ion-skeleton-text animated style="width: 90%; height: 20px;"></ion-skeleton-text>
+                <ion-skeleton-text animated style="width: 90%;"></ion-skeleton-text>
+                <ion-skeleton-text animated style="width: 90%;"></ion-skeleton-text>
+                <ion-badge style="margin-top: 8px;" color="dark">Loading...</ion-badge>
+              </ion-text>
+            </ion-col>
+            <ion-col size="auto">
+              <div style="display: flex; flex-direction: column; justify-content: space-between; height: 100%;">
+                <h3 style="margin: 0; font-weight: bold;">{{ 0 | currency: 'RM' }}</h3>
+                <p style="margin: 0; text-align: right;">QTY: {{ 0 }}</p>
+              </div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+
+    </ion-item-sliding>
+  </ion-list>
+
+  <ion-list *ngIf="!isLoading && loadedMenu.length > 0">
+    <ion-item-sliding *ngFor="let item of loadedMenu">
+
+      <ion-item-divider *ngIf="seperateGroup(item)">
+        <ion-label>{{ item.category }}</ion-label>
+      </ion-item-divider>
+
+      <ion-item>
+        <ion-grid fixed>
+          <ion-row style="margin: 16px 0px;">
+            <ion-col size="auto" class="ion-text-center" style="margin-right: 16px;">
+              <ion-thumbnail>
+                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              </ion-thumbnail>
+            </ion-col>
+            <ion-col class="ion-align-items-stretch">
+              <ion-text>
+                <h2 style="margin: 0;">{{ item.name }}</h2>
+                <p style="margin: 0;">{{ item.description }}</p>
+                <ion-badge style="margin-top: 8px;" [color]="item.status ? 'success' : 'danger'">{{ item.status ? 'Active' : 'Inactive' }}</ion-badge>
+              </ion-text>
+            </ion-col>
+            <ion-col size="auto">
+              <div style="display: flex; flex-direction: column; justify-content: space-between; height: 100%;">
+                <h3 style="margin: 0; font-weight: bold;">{{ item.price | currency: 'RM' }}</h3>
+                <p style="margin: 0; text-align: right;">QTY: {{ item.quantity }}</p>
+              </div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+
+      <ion-item-options>
+        <ion-item-option [routerLink]="item.id.toString()">
+          <ion-icon slot="icon-only" name="create-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
+
 </ion-content>
