--- a/src/app/pages/transaction/transaction-index/transaction-index.page.html
+++ b/src/app/pages/transaction/transaction-index/transaction-index.page.html
@@ -1,13 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>transaction-index</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Transactions</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">transaction-index</ion-title>
+      <ion-title size="large">Transactions</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
