--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,14 +17,21 @@
           <ion-list-header>Munch Time</ion-list-header>
           <br>
 
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerDirection="root" [routerLink]="['/pages/dashboard']" lines="none" detail="true" routerLinkActive="selected">
+              <ion-icon aria-hidden="true" slot="start" ios="home-outline" md="home-sharp"></ion-icon>
+              <ion-label>Home</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
+            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="true" routerLinkActive="selected">
               <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
 
-          <ion-item routerDirection="root" lines="full" detail="false" (click)="onLogout()">
+          <ion-item routerDirection="root" lines="full" detail="true" (click)="onLogout()">
             <ion-icon aria-hidden="true" slot="start" ios="log-out-outline" md="log-out-sharp"></ion-icon>
             <ion-label>Logout</ion-label>
           </ion-item>
