--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -13,7 +13,11 @@
     <ion-row>
       <ion-col size-xs="12" size-sm="10" size-md="8" size-lg="6" size-xl="4" offset-xs="0" offset-sm="1" offset-md="2" offset-lg="3" offset-xl="4">
 
-        <div [ngSwitch]="currentUser.roles">
+        <ion-text class="ion-text-center">
+          <h1 style="font-weight: bold;">{{ isLoading ? 'Loading...' : currentUser.name }}</h1>
+        </ion-text>
+
+        <div *ngIf="!isLoading" [ngSwitch]="currentUser.roles">
 
           <!-- ADMIN -->
           <div *ngSwitchCase="'admin'">
@@ -157,7 +161,6 @@
           </div>
 
         </div>
-
 
       </ion-col>
     </ion-row>
