--- a/src/app/pages/reservation/reservation-index/reservation-index.page.html
+++ b/src/app/pages/reservation/reservation-index/reservation-index.page.html
@@ -1,13 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>reservation-index</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Reservation</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">reservation-index</ion-title>
+      <ion-title size="large">Reservation</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
