--- a/src/app/pages/menu/menu-index/menu-index.page.html
+++ b/src/app/pages/menu/menu-index/menu-index.page.html
@@ -91,7 +91,7 @@
         <ion-item-option [routerLink]="item.id.toString()">
           <ion-icon slot="icon-only" name="create-outline" [ngStyle]="{ 'margin-top' : seperateGroup(item) ? '28px' : '0px' }"></ion-icon>
         </ion-item-option>
-        <ion-item-option color="danger" (click)="onDeleteItem(item)">
+        <ion-item-option color="danger" (click)="deleteItem(item)">
           <ion-icon slot="icon-only" name="trash" [ngStyle]="{ 'margin-top' : seperateGroup(item) ? '28px' : '0px' }"></ion-icon>
         </ion-item-option>
       </ion-item-options>
