--- a/src/app/error/maintenance/maintenance.page.html
+++ b/src/app/error/maintenance/maintenance.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="false">
   <ion-toolbar>
     <ion-title>Maintenance</ion-title>
   </ion-toolbar>
