--- a/src/app/pages/qr/qr-confirmation/qr-confirmation.page.html
+++ b/src/app/pages/qr/qr-confirmation/qr-confirmation.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="false">
   <ion-toolbar>
     <ion-title>qr-confirmation</ion-title>
   </ion-toolbar>
