--- a/src/app/pages/reservation/reservation-create/reservation-create.page.html
+++ b/src/app/pages/reservation/reservation-create/reservation-create.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="false">
   <ion-toolbar>
     <ion-title>reservation-create</ion-title>
   </ion-toolbar>
