--- a/src/app/pages/child/child-index/child-index.page.html
+++ b/src/app/pages/child/child-index/child-index.page.html
@@ -3,14 +3,52 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>My Child</ion-title>
+    <ion-title>My Children</ion-title>
+    <ion-buttons slot="end">
+      <ion-button routerLink="create">
+        <ion-icon slot="icon-only" name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">My Child</ion-title>
+      <ion-title size="large">My Children</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-list *ngIf="!isLoading">
+    <ion-card *ngFor="let item of loadedStudent">
+      <ion-card-header color="pink">
+        <ion-grid fixed>
+          <ion-row class="ion-align-items-center">
+            <ion-col size="auto">
+              <ion-avatar class="ion-margin-end">
+                <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+              </ion-avatar>
+            </ion-col>
+            <ion-col>
+              <ion-text style="font-size: larger; font-weight: bold;">{{ item.name }}</ion-text>
+            </ion-col>
+            <ion-col size="auto">
+              <ion-button style="display: inline; margin: 0px;" size="small" color="primary" [routerLink]="item.id.toString()">
+                <ion-icon slot="icon-only" name="create-outline"></ion-icon>
+              </ion-button>
+              <ion-button style="display: inline; margin: 0px;" size="small" color="danger" (click)="deleteItem(item)">
+                <ion-icon slot="icon-only" name="trash"></ion-icon>
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card-header>
+      <ion-card-content class="ion-text-start" style="padding: 16px;">
+        <ion-text>Parent: {{ item.parent_name }}</ion-text>
+        <br>
+        <ion-text>Class: {{ item.class_name ? item.class_name : 'N/A' }}</ion-text>
+      </ion-card-content>
+    </ion-card>
+  </ion-list>
+
 </ion-content>
