--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -1,13 +1,57 @@
-<ion-header [translucent]="false">
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="gradient">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">register</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-xs="12" size-sm="10" size-md="8" size-lg="6" size-xl="4" offset-xs="0" offset-sm="1" offset-md="2" offset-lg="3" offset-xl="4">
+
+        <div class="ion-text-center header">
+          <img class="app-icon" src="assets/icons/appicon.png" alt="App Icon">
+        </div>
+
+        <form #form="ngForm" (ngSubmit)="submitForm(form)" class="ion-padding">
+
+          <ion-title size="large">Sign Up</ion-title>
+
+          <ion-item class="item-{{ (name.invalid && name.touched) || (name.invalid && form.submitted) ? 'start' : 'single' }} input-field" lines="full">
+            <ion-input ngModel required="true" type="text" name="name" #name="ngModel" autocomplete="email" placeholder="Name"></ion-input>
+          </ion-item>
+          <ion-item class="item-end" *ngIf="(name.invalid && name.touched) || (name.invalid && form.submitted)" lines="none">
+            <ion-text class="error-text">
+              <p *ngIf="name.errors?.['required']">This field is required.</p>
+            </ion-text>
+          </ion-item>
+
+          <ion-item class="item-{{ (username.invalid && username.touched) || (username.invalid && form.submitted) ? 'start' : 'single' }} input-field" lines="full">
+            <ion-input ngModel required="true" type="email" name="username" #username="ngModel" autocomplete="email" placeholder="E-Mel" inputmode="email" [pattern]="EMAIL_REGEX"></ion-input>
+          </ion-item>
+          <ion-item class="item-end" *ngIf="(username.invalid && username.touched) || (username.invalid && form.submitted)" lines="none">
+            <ion-text class="error-text">
+              <p *ngIf="username.errors?.['required']">This field is required.</p>
+              <p *ngIf="username.errors?.['pattern']">Email must be in a valid format.</p>
+            </ion-text>
+          </ion-item>
+
+          <ion-item class="item-{{ (password.invalid && password.touched) || (password.invalid && form.submitted) ? 'start' : 'single' }} input-field" lines="full">
+            <ion-input ngModel name="password" [type]="showPassword ? 'text' : 'password'" placeholder="Password" required="true" minlength="8" #password="ngModel" autocomplete="password"></ion-input>
+            <ion-icon slot="end" name="{{ showPassword ? 'eye-off-outline' : 'eye-outline' }}" (click)="showPassword = !showPassword"></ion-icon>
+          </ion-item>
+          <ion-item class="item-end" *ngIf="(password.invalid && password.touched) || (password.invalid && form.submitted)" lines="none">
+            <ion-text class="error-text">
+              <p *ngIf="password.errors?.['required']">This field is required.</p>
+              <p *ngIf="password.errors?.['minlength']">Password must be at least 8 character.</p>
+            </ion-text>
+          </ion-item>
+
+          <ion-button type="submit" mode="ios" expand="block" class="ion-margin-top" color="pink">Sign Up</ion-button>
+
+          <ion-row class="register-row ion-justify-content-between">
+            <ion-text (click)="openLoginPage()">Sign In</ion-text>
+          </ion-row>
+
+        </form>
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
