--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -148,7 +148,7 @@
               </ion-card>
             </div>
 
-            <ion-card *ngIf="!isLoading && loadedChild.length === 0">
+            <ion-card *ngIf="!isLoading && loadedChild.length === 0" color="danger">
               <ion-card-content>You have no childs yet.</ion-card-content>
             </ion-card>
           </div>
