--- a/src/app/pages/menu/menu-edit/menu-edit.page.html
+++ b/src/app/pages/menu/menu-edit/menu-edit.page.html
@@ -27,7 +27,7 @@
       <ion-row>
         <ion-col size="4" class="ion-padding-start ion-padding-end">
           <ion-thumbnail>
-            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+            <img alt="Silhouette of mountains" [src]="image ? image : 'https://ionicframework.com/docs/img/demos/thumbnail.svg'" />
           </ion-thumbnail>
         </ion-col>
 
