--- a/src/app/pages/menu/menu-index/menu-index.page.html
+++ b/src/app/pages/menu/menu-index/menu-index.page.html
@@ -67,7 +67,7 @@
           <ion-row style="margin: 16px 0px;">
             <ion-col size="auto" class="ion-text-center" style="margin-right: 16px;">
               <ion-thumbnail>
-                <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+                <img [alt]="item.name" [src]="item.image" />
               </ion-thumbnail>
             </ion-col>
             <ion-col class="ion-align-items-stretch">
