--- a/src/app/pages/reservation/reservation-index/reservation-index.page.html
+++ b/src/app/pages/reservation/reservation-index/reservation-index.page.html
@@ -3,14 +3,24 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Reservation</ion-title>
+    <ion-title>Reservations</ion-title>
+    <ion-buttons slot="end">
+      <ion-button routerLink="create">
+        <ion-icon slot="icon-only" name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Reservation</ion-title>
+      <ion-title size="large">Reservations</ion-title>
     </ion-toolbar>
   </ion-header>
+
+    <ion-card *ngIf="!isLoading && loadedReservation.length === 0" color="danger">
+      <ion-card-content>You have no reservations yet.</ion-card-content>
+    </ion-card>
+
 </ion-content>
